--- a/huntsc/src/Form-Requester.css
+++ b/huntsc/src/Form-Requester.css
@@ -3,9 +3,10 @@ body {
 }
 
 form {
-    display: block;
+    display: flex;
+    flex-direction: column;
     background-color: #EFC3E6;
-    width: 40%;
+    width: 500px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5em;
