--- a/huntsc/src/indivListing.css
+++ b/huntsc/src/indivListing.css
@@ -1,12 +1,11 @@
 .OneListing{
     font-family: 'Montserrat';
-    background: linear-gradient(#e66465, #9198e5);
+    background: linear-gradient(#9c89B8, #F0A6CA, #F0E6EF);
     border: 5px solid black;
     border-radius: 30px;
     text-align: center;
     padding: 20px;
     margin: 20px;
-    /* line-height: 15px; */
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -17,21 +16,20 @@
     margin-bottom: 5px;
     border: 2px solid blue;
     display: inline-block;
-    background-color: lightblue;
+    font-family: 'Raleway', sans-serif;
 }
 .header{
-    background-color: yellow;
     text-align: center;
     display: inline-block;
     width: 20%;
 }
 
 .VenueInfo{
-    background-color: lightblue;
     display: inline-block;
     text-align: left;
     width: 60%;
     padding-left: 4%;
+    font-family: 'Raleway', sans-serif;
 }
 
 
@@ -39,11 +37,11 @@
 
 
 .button {
-    border: 1px solid black;
+    border: 3px solid transparent;
+    background-color: lightblue;
     display: inline-block;
-    background-color: red;
     font-size: 130%;
-    
+    font-family: 'Raleway', sans-serif;
     border-radius: 20px;
     width: 10%;
     padding-top: 1%;
@@ -58,4 +56,5 @@
 
 #linked {
     text-decoration: none;
+    color: black;
 }
