--- a/huntsc/src/indivListing.css
+++ b/huntsc/src/indivListing.css
@@ -14,9 +14,15 @@
 }
 .fryft{
     margin-bottom: 5px;
-    border: 2px solid blue;
+    border: 5px solid #ff00bf;
+    background-color: #ff00bf;
+    color: white;
     display: inline-block;
     font-family: 'Raleway', sans-serif;
+    border-radius: 20px;
+    width: 40%;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 .header{
     text-align: center;
@@ -37,8 +43,6 @@
 
 
 .button {
-    border: 3px solid transparent;
-    background-color: lightblue;
     display: inline-block;
     font-size: 130%;
     font-family: 'Raleway', sans-serif;
@@ -46,15 +50,20 @@
     width: 10%;
     padding-top: 1%;
     padding-bottom: 1%;
+    border: 3px solid black;
     
 
 }
 .button:hover{
     text-shadow: black;
-    border: 3px solid black;
+    background-color: black;
 }
 
 #linked {
     text-decoration: none;
     color: black;
+}
+
+.button:hover #linked {
+    color: pink;
 }
