--- a/huntsc/src/navbar.css
+++ b/huntsc/src/navbar.css
@@ -1,6 +1,5 @@
 .navbar{
     text-align:center;
-    
     background-color: #EFC3E6;
     width: 100%;
     position: fixed;
@@ -9,33 +8,63 @@
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
+    text-decoration: none;
     
 }
 
-.add-form{
+.logo{
+    color:white;
+    font-size: 15px;
+    letter-spacing: 3px;
+    cursor: pointer;
+}
 
+.add-form{
     /* margin-left:650px; */
     padding-top: 10px;
     /* margin-right: 30px; */
     width: 120px;
-    background-color: #F0A6CA;
+    background-color: transparent;
     top: 0;
+    text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
 }
 .add-form:hover {
     background-color: purple;
+}
+
+.add-form:hover .FormButton {
+    color: #EFC3E6;
+}
+
+.list:hover .FormButton {
+    color: #EFC3E6;
+}
+
+.FormButton {
+    text-decoration: none;
+    color: black;
 }
 
 .list{
     /* margin-right:600px; */
     padding-top: 10px;
     /* margin-left: 30px; */
-    background-color: #F0A6CA;
+    /* background-color: #F0A6CA; */
     width: 120px;
     top: 0;
+    text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
 }
 
 .list:hover{
     background-color: purple;
+}
+
+.button{
+
 }
 
 .whole-list {
