--- a/huntsc/src/venue_list.css
+++ b/huntsc/src/venue_list.css
@@ -1,3 +1,19 @@
+title {
+    font-family: 'Shrikhand', cursive;
+    font-size: 500px;
+
+}
+
+h2 {
+    font-family: 'Shrikhand', cursive;
+    font-size: 70px;
+}
+
+h3 {
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
 .whole-list {
     display: flex;
     flex-direction: column;
