--- a/huntsc/src/Login.css
+++ b/huntsc/src/Login.css
@@ -7,3 +7,13 @@ body {
 h1 {
     font-family: 'Shrikhand', cursive;
 }
+
+button {
+    font-family: 'Raleway', sans-serif;
+    background-color: #EFC3E6;
+    border-radius: 5px;
+    border-width: 2px;
+    padding: 5px;
+    width: 250px;
+    cursor: pointer;
+}
