--- a/huntsc/src/navbar.css
+++ b/huntsc/src/navbar.css
@@ -1,4 +1,13 @@
+
+
+.user-message {
+    padding-top: 6px;
+    padding-right: 850px;
+    font-size: 20px;
+}
+
 .navbar{
+
     text-align:center;
     background-color: #EFC3E6;
     width: 100%;
@@ -9,23 +18,6 @@
     flex-wrap: wrap;
     justify-content: center;
     text-decoration: none;
-    
-}
-
-
-.message{
-    padding-top: 10px;
-    /* margin-right: 30px; */
-    width: 120px;
-    background-color: transparent;
-    top: 0px;
-    text-decoration: none;
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    
     
 }
 
@@ -76,14 +68,4 @@
 .sign-button:hover{
     background-color: purple;
 
-}
-
-
-.whole-list {
-    margin-top: 50px;
-}
-
-.title {
-    margin-top: 50px;
-    text-align: center;
 }
