--- a/huntsc/src/addVenue.css
+++ b/huntsc/src/addVenue.css
@@ -56,6 +56,9 @@ info
  .fryft2 {
   margin-bottom: 5px;
   margin-top: 5px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -68,14 +71,11 @@ info
 #fryft {
   width: 30px;
   cursor: pointer;
+  zoom: 1.5;
 }
 
 .finish-buttons{
   margin-left: 10px;
   margin-right: 10px;
-}
-
-.finish-buttons {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-top: 10px;
 }
