--- a/huntsc/src/addVenue.css
+++ b/huntsc/src/addVenue.css
@@ -77,6 +77,32 @@ info
 .finish-buttons{
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: 10px;
+  border-color: black;
 }
 
+.submit-button {
+  border: 2px solid black;
+  width: 80%;
+  height: line-height;
+  font-size: 14px;
+  text-decoration: none;
+  color: black;
+  font-weight: lighter;
+  padding-top: 4.5px;
+  padding-bottom: 4.5px;
+  font-family: 'Raleway', sans-serif;
+  background-color: #efc3e6;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background: white;
+  color: black;
+}
+
+.button-cont {
+  display: flex;
+  align-items: center;
+  margin: auto;
+}
