--- a/huntsc/src/Login.css
+++ b/huntsc/src/Login.css
@@ -1,10 +1,29 @@
 
 body {
-    background: #F0A6CA;
+    background-image: url("https://assets-global.website-files.com/5e39e095596498a8b9624af1/5f6e93d250a6d04f4eae9f02_Backgrounds-WFU-thumbnail-(size).jpg") ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+   
 
 }
 
+.box{
+   border-radius: 15px;
+   border: 3px solid black;
+   padding-bottom: 25px;
+   padding-left: 25px;
+   padding-right: 25px;
+   margin-top: 50%;
+}
+
+
+
 h1 {
+
     font-family: 'Shrikhand', cursive;
 }
 
