--- a/huntsc/src/Form-Requester.css
+++ b/huntsc/src/Form-Requester.css
@@ -8,18 +8,23 @@ h1 {
     font-family: 'Shrikhand', cursive;
 }
 
-button {
+.submission {
+    border: 2px solid black;
+    width: 30%;
+    height: line-height;
+    font-size: 14px;
+    text-decoration: none;
+    color: black;
+    font-weight: lighter;
+    padding-top: 4.5px;
+    padding-bottom: 4.5px;
     font-family: 'Raleway', sans-serif;
-    background-color: #F0A6CA;
-    width: 100px;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: #efc3e6;
     border-radius: 5px;
-    border-width: 0.5px;
     cursor: pointer;
-}
+  }
 
-button:hover {
+.submission:hover {
     background: white;
     color: black;
 }
@@ -35,6 +40,7 @@ form {
     margin-top: 5em;
     padding: 20px 10px;
     border-radius: 30px;
+    align-items: center;
 
 }
 input {
@@ -49,3 +55,25 @@ input[type=text]:focus {
     background-color: F0E6EF;
     border: 3px white;
 }
+
+.add-venue-button {
+    border: 2px solid black;
+    height: line-height;
+    font-size: 14px;
+    text-decoration: none;
+    color: black;
+    font-weight: lighter;
+    padding-top: 4.5px;
+    padding-bottom: 4.5px;
+    font-family: 'Raleway', sans-serif;
+    background-color: #efc3e6;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100px;
+  }
+  
+  .add-venue-button:hover {
+    background: white;
+    color: black;
+  }
+  
