--- a/huntsc/src/Login.css
+++ b/huntsc/src/Login.css
@@ -1,6 +1,7 @@
 
 body {
     background: #F0A6CA;
+    /* background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStnHTkF-_Aq4ehNMGAAnECSdOQmg2ZtzIJdCSXBs11cA&s'); */
 
 }
 
