--- a/huntsc/src/addVenue.css
+++ b/huntsc/src/addVenue.css
@@ -13,7 +13,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 
 
-    /* background-color: #F0E6EF; */
+    /* background-color: #F0A6CA; */
 }
 
 form {
